--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://nair0lf32.github.io/" />
     <meta property="og:description" content="Personal github page of EDEMESSI 'nairolf32' Florian">
-    <meta property="og:image" content="https://raw.githubusercontent.com/nair0lf32/nair0lf32.github.io/main/assets/img/og-nair0lf32.png"/>
+    <meta property="og:site_name" content="nair0lf32">
+    <meta property="og:image" itemprop="image primaryImageOfPage"
+        content="https://raw.githubusercontent.com/nair0lf32/nair0lf32.github.io/main/assets/img/og-nair0lf32.png" />
+    <!-- OG for twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:domain" content="http://nair0lf32.github.io">
+    <meta name="twitter:title" property="og:title" itemprop="name" content="EDEMESSI Florian nair0lf32">
+    <meta name="twitter:description" property="og:description" itemprop="description"
+        content="Personal github page of EDEMESSI 'nairolf32' Florian">
 
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
